# slipstream

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  resolvers-trusted.txt  unbound.conf
.github/workflows/: main.yml  release.yaml
docs/: Gemfile  _config.yml  benchmark.md  index.md  protocol.md  usage.md
docs/installation/: build.md  docker.md  gh.md  index.md
include/: lua-resty-base-encoding-base32.h  slipstream.h  slipstream_dns_request_buffer.h  slipstream_inline_dots.h  slipstream_llm.h  slipstream_packet.h  slipstream_resolver_addresses.h  slipstream_server_cc.h  slipstream_server_circular_query_buffer.h  slipstream_slot.h  slipstream_sockloop.h  slipstream_utils.h
src/: slipstream.c  slipstream_client.c  slipstream_client_cli.c  slipstream_dns_request_buffer.c  slipstream_inline_dots.c  slipstream_llm.c  slipstream_packet.c  slipstream_resolver_addresses.c  slipstream_server.c  slipstream_server_cc.c  slipstream_server_circular_query_buffer.c  slipstream_server_cli.c  slipstream_sockloop.c  slipstream_utils.c
